tests/baselines/reference/overloadOnConstDuplicateOverloads1.errors.txt
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(1,1): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(1,1): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(2,1): error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(2,1): error TS2463: Duplicate overload signature for foo.
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(6,1): error TS2463: Duplicate overload signature for foo2.
tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts(7,1): error TS2463: Duplicate overload signature for foo2.


==== tests/cases/compiler/overloadOnConstDuplicateOverloads1.ts (6 errors) ====
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo.
    function foo(a: any, x: any) {
    }
    
    function foo2(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(a: 'hi', x: string);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2463: Duplicate overload signature for foo2.
    function foo2(a: string, x: string);
    function foo2(a: any, x: any) {
    }